@@ -30,7 +30,7 @@ import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.settings.SettingsFilter;
 import org.elasticsearch.common.unit.TimeValue;
 import org.elasticsearch.grok.Grok;
-import org.elasticsearch.grok.ThreadWatchdog;
+import org.elasticsearch.grok.MatcherWatchdog;
 import org.elasticsearch.ingest.DropProcessor;
 import org.elasticsearch.ingest.PipelineProcessor;
 import org.elasticsearch.ingest.Processor;
@@ -42,10 +42,11 @@ import org.elasticsearch.rest.RestHandler;
 
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Supplier;
+
+import static java.util.Map.entry;
 
 public class IngestCommonPlugin extends Plugin implements ActionPlugin, IngestPlugin {
 
@@ -60,39 +61,41 @@ public class IngestCommonPlugin extends Plugin implements ActionPlugin, IngestPl
 
     @Override
     public Map<String, Processor.Factory> getProcessors(Processor.Parameters parameters) {
-        Map<String, Processor.Factory> processors = new HashMap<>();
-        processors.put(DateProcessor.TYPE, new DateProcessor.Factory(parameters.scriptService));
-        processors.put(SetProcessor.TYPE, new SetProcessor.Factory(parameters.scriptService));
-        processors.put(AppendProcessor.TYPE, new AppendProcessor.Factory(parameters.scriptService));
-        processors.put(RenameProcessor.TYPE, new RenameProcessor.Factory(parameters.scriptService));
-        processors.put(RemoveProcessor.TYPE, new RemoveProcessor.Factory(parameters.scriptService));
-        processors.put(SplitProcessor.TYPE, new SplitProcessor.Factory());
-        processors.put(JoinProcessor.TYPE, new JoinProcessor.Factory());
-        processors.put(UppercaseProcessor.TYPE, new UppercaseProcessor.Factory());
-        processors.put(LowercaseProcessor.TYPE, new LowercaseProcessor.Factory());
-        processors.put(TrimProcessor.TYPE, new TrimProcessor.Factory());
-        processors.put(ConvertProcessor.TYPE, new ConvertProcessor.Factory());
-        processors.put(GsubProcessor.TYPE, new GsubProcessor.Factory());
-        processors.put(FailProcessor.TYPE, new FailProcessor.Factory(parameters.scriptService));
-        processors.put(ForEachProcessor.TYPE, new ForEachProcessor.Factory(parameters.scriptService));
-        processors.put(DateIndexNameProcessor.TYPE, new DateIndexNameProcessor.Factory(parameters.scriptService));
-        processors.put(SortProcessor.TYPE, new SortProcessor.Factory());
-        processors.put(GrokProcessor.TYPE, new GrokProcessor.Factory(GROK_PATTERNS, createGrokThreadWatchdog(parameters)));
-        processors.put(ScriptProcessor.TYPE, new ScriptProcessor.Factory(parameters.scriptService));
-        processors.put(DotExpanderProcessor.TYPE, new DotExpanderProcessor.Factory());
-        processors.put(JsonProcessor.TYPE, new JsonProcessor.Factory());
-        processors.put(KeyValueProcessor.TYPE, new KeyValueProcessor.Factory());
-        processors.put(URLDecodeProcessor.TYPE, new URLDecodeProcessor.Factory());
-        processors.put(BytesProcessor.TYPE, new BytesProcessor.Factory());
-        processors.put(PipelineProcessor.TYPE, new PipelineProcessor.Factory(parameters.ingestService));
-        processors.put(DissectProcessor.TYPE, new DissectProcessor.Factory());
-        processors.put(DropProcessor.TYPE, new DropProcessor.Factory());
-        return Collections.unmodifiableMap(processors);
+        return Map.ofEntries(
+                entry(DateProcessor.TYPE, new DateProcessor.Factory(parameters.scriptService)),
+                entry(SetProcessor.TYPE, new SetProcessor.Factory(parameters.scriptService)),
+                entry(AppendProcessor.TYPE, new AppendProcessor.Factory(parameters.scriptService)),
+                entry(RenameProcessor.TYPE, new RenameProcessor.Factory(parameters.scriptService)),
+                entry(RemoveProcessor.TYPE, new RemoveProcessor.Factory(parameters.scriptService)),
+                entry(SplitProcessor.TYPE, new SplitProcessor.Factory()),
+                entry(JoinProcessor.TYPE, new JoinProcessor.Factory()),
+                entry(UppercaseProcessor.TYPE, new UppercaseProcessor.Factory()),
+                entry(LowercaseProcessor.TYPE, new LowercaseProcessor.Factory()),
+                entry(TrimProcessor.TYPE, new TrimProcessor.Factory()),
+                entry(ConvertProcessor.TYPE, new ConvertProcessor.Factory()),
+                entry(GsubProcessor.TYPE, new GsubProcessor.Factory()),
+                entry(FailProcessor.TYPE, new FailProcessor.Factory(parameters.scriptService)),
+                entry(ForEachProcessor.TYPE, new ForEachProcessor.Factory(parameters.scriptService)),
+                entry(DateIndexNameProcessor.TYPE, new DateIndexNameProcessor.Factory(parameters.scriptService)),
+                entry(SortProcessor.TYPE, new SortProcessor.Factory()),
+                entry(GrokProcessor.TYPE, new GrokProcessor.Factory(GROK_PATTERNS, createGrokThreadWatchdog(parameters))),
+                entry(ScriptProcessor.TYPE, new ScriptProcessor.Factory(parameters.scriptService)),
+                entry(DotExpanderProcessor.TYPE, new DotExpanderProcessor.Factory()),
+                entry(JsonProcessor.TYPE, new JsonProcessor.Factory()),
+                entry(KeyValueProcessor.TYPE, new KeyValueProcessor.Factory()),
+                entry(URLDecodeProcessor.TYPE, new URLDecodeProcessor.Factory()),
+                entry(BytesProcessor.TYPE, new BytesProcessor.Factory()),
+                entry(PipelineProcessor.TYPE, new PipelineProcessor.Factory(parameters.ingestService)),
+                entry(DissectProcessor.TYPE, new DissectProcessor.Factory()),
+                entry(DropProcessor.TYPE, new DropProcessor.Factory()),
+                entry(HtmlStripProcessor.TYPE, new HtmlStripProcessor.Factory()),
+                entry(CsvProcessor.TYPE, new CsvProcessor.Factory()));
     }
 
     @Override
     public List<ActionHandler<? extends ActionRequest, ? extends ActionResponse>> getActions() {
-        return Arrays.asList(new ActionHandler<>(GrokProcessorGetAction.INSTANCE, GrokProcessorGetAction.TransportAction.class));
+        return Collections.singletonList(
+                new ActionHandler<>(GrokProcessorGetAction.INSTANCE, GrokProcessorGetAction.TransportAction.class));
     }
 
     @Override
@@ -100,7 +103,7 @@ public class IngestCommonPlugin extends Plugin implements ActionPlugin, IngestPl
                                              IndexScopedSettings indexScopedSettings, SettingsFilter settingsFilter,
                                              IndexNameExpressionResolver indexNameExpressionResolver,
                                              Supplier<DiscoveryNodes> nodesInCluster) {
-        return Arrays.asList(new GrokProcessorGetAction.RestAction(settings, restController));
+        return Arrays.asList(new GrokProcessorGetAction.RestAction(restController));
     }
 
     @Override
@@ -108,10 +111,11 @@ public class IngestCommonPlugin extends Plugin implements ActionPlugin, IngestPl
         return Arrays.asList(WATCHDOG_INTERVAL, WATCHDOG_MAX_EXECUTION_TIME);
     }
 
-    private static ThreadWatchdog createGrokThreadWatchdog(Processor.Parameters parameters) {
+    private static MatcherWatchdog createGrokThreadWatchdog(Processor.Parameters parameters) {
         long intervalMillis = WATCHDOG_INTERVAL.get(parameters.env.settings()).getMillis();
         long maxExecutionTimeMillis = WATCHDOG_MAX_EXECUTION_TIME.get(parameters.env.settings()).getMillis();
-        return ThreadWatchdog.newInstance(intervalMillis, maxExecutionTimeMillis, parameters.relativeTimeSupplier, parameters.scheduler);
+        return MatcherWatchdog.newInstance(intervalMillis, maxExecutionTimeMillis,
+            parameters.relativeTimeSupplier, parameters.scheduler::apply);
     }
 
 }
